--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Zuitt/wd003-s02-d2-mini-activity"]
 	path = Zuitt/wd003-s02-d2-mini-activity
 	url = git@gitlab.com:tuitt/students/batch58/aduh-medimar/wd003-s02-d2-mini-activity.git
+[submodule "Zuitt/wd003-s03-a1"]
+	path = Zuitt/wd003-s03-a1
+	url = git@gitlab.com:tuitt/students/batch58/aduh-medimar/wd003-s03-a1.git
