--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "Zuitt/wd003-s03-a1"]
 	path = Zuitt/wd003-s03-a1
 	url = git@gitlab.com:tuitt/students/batch58/aduh-medimar/wd003-s03-a1.git
+[submodule "Zuitt/wd003-s04-a1"]
+	path = Zuitt/wd003-s04-a1
+	url = git@gitlab.com:tuitt/students/batch58/aduh-medimar/wd003-s04-a1.git
