--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "Zuitt/wd003-s06-d1"]
 	path = Zuitt/wd003-s06-d1
 	url = git@gitlab.com:tuitt/students/batch58/aduh-medimar/wd003-s06-d1.git
+[submodule "Zuitt/wd003-s06-a1"]
+	path = Zuitt/wd003-s06-a1
+	url = git@gitlab.com:tuitt/students/batch58/aduh-medimar/wd003-s06-a1.git
