--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "Zuitt/wd003-s10-d1"]
 	path = Zuitt/wd003-s10-d1
 	url = git@gitlab.com:tuitt/students/batch58/aduh-medimar/wd003-s10-d1.git
+[submodule "Zuitt/mcpinsan-capstone1"]
+	path = Zuitt/mcpinsan-capstone1
+	url = git@gitlab.com:ramidem/mcpinsan-capstone1.git
